--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ gtts
 beautifulsoup4
 requests==2.20.0
 python-telegram-bot==13.6
-SQLAlchemy==1.3.20
+sqlalchemy==1.3.20
 psycopg2-binary
 feedparser
 faker
