--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ gtts
 beautifulsoup4
 requests==2.20.0
 python-telegram-bot==13.11
-SQLAlchemy==1.4.28
+sqlalchemy==1.4.28
 psycopg2-binary
 feedparser
 faker
